libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__Role::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type Role = {
	roleType: "web"
} & WebRole | {
	roleType: "team"
} & TeamRole;
