libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__RoleId::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type RoleId = {
	roleType: "web"
	id: WebRoleId
} | {
	roleType: "team"
	id: TeamRoleId
};
