libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__RoleType::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type RoleType = "web" | "team";
