libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructDoubleSkipped::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructDoubleSkipped {
	integer: number;
}
