libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructFlattenedEnum-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type StructFlattenedEnum = {
	name: string;
} & EnumInternal;
