libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructMultipleFlattened::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructMultipleFlattened extends StructSimpleFlattened, StructNested {
	name: string;
}
