libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructMultipleSkipped-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructMultipleSkipped {
	integer: number;
	string: string;
}
