libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructNested-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructNested {
	name: string;
	simple: StructSimple;
}
