libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructNestedInterfaceFlattened-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructNestedInterfaceFlattened extends StructMultipleFlattened {
	name: string;
}
